# PureBite-Dental

./: .env.example  .gitignore  CLAUDE.md  README.md  demo-credentials.txt  docker-compose.coolify.yml  docker-compose.yml  imp.txt
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: log_context.py  scheduler.py
backend/app/core/agents/: context.py  orchestrator.py  redaction.py  tooling.py
backend/app/core/agents/tools/: tool.py  (+1 more)
backend/app/core/auth/: dependencies.py
backend/app/core/events/: types.py
backend/app/core/llm/: __init__.py  base.py  factory.py  openai_provider.py
backend/app/core/plugins/: processor.py  service.py
backend/app/modules/agenda/: CHANGELOG.md  CLAUDE.md  __init__.py  tools.py
backend/app/modules/billing/: CHANGELOG.md  CLAUDE.md  __init__.py  service.py  tools.py
backend/app/modules/budget/: CHANGELOG.md  CLAUDE.md  __init__.py  service.py  tools.py
backend/app/modules/catalog/: CHANGELOG.md  CLAUDE.md  __init__.py  models.py  router.py  schemas.py  seed.py  service.py  tools.py
backend/app/modules/clinical_notes/: CHANGELOG.md  __init__.py  schemas.py  seed.py  service.py
backend/app/modules/copilot/: CHANGELOG.md  CLAUDE.md  __init__.py  bridge.py  models.py  router.py  schemas.py  serde.py  service.py  tasks.py
backend/app/modules/media/: CHANGELOG.md  service.py
backend/app/modules/migration_import/: CHANGELOG.md  CLAUDE.md  __init__.py  events.py  models.py  proposals.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: CHANGELOG.md  __init__.py
backend/app/modules/odontogram/: CHANGELOG.md
backend/app/modules/patient_timeline/: CHANGELOG.md  CLAUDE.md  __init__.py  service.py  tools.py
backend/app/modules/patients/: CHANGELOG.md  CLAUDE.md  __init__.py  service.py  tools.py
backend/app/modules/patients_clinical/: CHANGELOG.md
backend/app/modules/payments/: CHANGELOG.md  CLAUDE.md  __init__.py  events.py  models.py  router.py  service.py  tools.py
backend/app/modules/periodontogram/: CHANGELOG.md  CLAUDE.md  __init__.py  constants.py  events.py  indices.py  lifecycle.py  models.py  router.py  schemas.py  service.py
backend/app/modules/recalls/: CHANGELOG.md  CLAUDE.md  __init__.py  seed.py  tools.py
backend/app/modules/reports/: CHANGELOG.md  CLAUDE.md  __init__.py  tools.py
backend/app/modules/schedules/: CHANGELOG.md  CLAUDE.md  __init__.py  tools.py
backend/app/modules/treatment_plan/: CHANGELOG.md  CLAUDE.md  events.py  models.py  router.py  schemas.py  service.py
backend/app/modules/verifactu/: CHANGELOG.md  router.py
backend/app/seeds/: demo_data.py
backend/scripts/: check_docs_coverage.py  create_tenant.py  dryrun_gesden_catalog.py  reset_db_neon.py  run_full_migration.py  run_full_migration_filtered.py  seed_demo.py
backend/templates/email/en/: copilot_morning_digest.html
backend/templates/email/es/: copilot_morning_digest.html
backend/tests/: conftest.py  test_agents_tooling.py  test_catalog.py  test_clinics_and_core_flows.py  test_copilot_bridge.py  test_copilot_digest.py  test_llm_orchestrator.py  test_log_context.py  test_module_isolation.py  test_module_tools.py  test_scheduler_jobs.py  test_treatment_plan.py  test_uninstall_roundtrip.py
backend/tests/modules/migration_import/: test_applied_treatment_non_clinical_note.py  test_applied_treatment_shadow.py  test_catalog_dryrun_gesden.py  test_catalog_fuzzy.py  test_catalog_mapper_infer.py  test_debt_mapper.py  test_gesden_catalog_table.py  test_mapping_decisions.py  test_payment_refund.py  test_professional_mapper.py
(+278 files in other folders)
